--- a/apps/covid_19_api_2020/static/style.css
+++ b/apps/covid_19_api_2020/static/style.css
@@ -1,10 +1,10 @@
 body {
     background-color: #002D62;
-    color: #EB6E1F;
+    color: #F4911E;
 }
 
 .container {
-    background: #F4911E;
+    background-color: #EB6E1F;
     color: #002D62;
     border-radius: 10px;
     margin-bottom: 10px;
